# sfeir-hivemind

./: .envrc  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  bentofile.yaml  flake.nix  pyproject.toml  requirements.txt  skaffold.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: architecture-design.excalidraw
manifests/base/: service.yaml
manifests/overlays/default/: kustomization.yaml  service.patch.yaml
sfeir/hivemind/: build.py  client.py  embeddings.py  io.py  langchain.ipynb  model.py  runner.py  schema.py  server.py  service.py
sfeir/hivemind/embeddings/: __init__.py  build.py  service.py
sfeir/hivemind/llm/: build.py
sfeir/hivemind/models/: embeddings.py  llm.py  model.py  tokenizer.py
sfeir/hivemind/protos/: hivemind.proto  hivemind_pb2.py  hivemind_pb2.pyi  hivemind_pb2_grpc.py  proto.pb
sfeir/langchain/embeddings/: bentoml.py  hivemind.py
sfeir/langchain/llms/: bentoml.py
terraform/: .terraform.lock.hcl  artifact_registry.tf  cloud_run.tf  compute.tf  gke.tf  iam.tf  storage.tf  variable.tf  version.tf
