[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfeir-hivemind"
description = 'Sfeir Hivemind'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "William Phetsinorath", email = "william.phtesinorath@shikanime.studio" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "langchain[llms]>=0.0.190,<0.1",
  "google-cloud-aiplatform>=1.25.0,<2.0",
  "Pillow>=9.5,<10",
  "transformers>=4.29,<5",
  "chromadb>=0.3,<0.4",
  "google-api-python-client>=2.88,<3",
  "google-auth-httplib2>=0.1,<1",
  "google-auth-oauthlib>=1.0,<2",
  "PyPDF2>=3.0,<4",
  "sentence-transformers>=2.2,<3",
  "deeplake>=3.6,<4",
  "grpcio>=1.54,<2",
]
dynamic = ["version"]

[project.optional-dependencies]
jupyter = ["IProgress", "ipywidgets", "ipykernel"]

[project.urls]
Documentation = "https://github.com/infinity-blackhole/python-root-commit#readme"
Issues = "https://github.com/infinity-blackhole/python-root-commit/issues"
Source = "https://github.com/infinity-blackhole/python-root-commit"

[tool.hatch.version]
path = "sfeir/hivemind/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov", "grpcio-tools"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sfeir_hivemind --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["sfeir/hivemind/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.isort]
profile = "black"
